# personal-site

./: .gitignore
client/: Cargo.toml  Trunk.toml  index.html  input.css
client/public/: index.css
client/src/: about.rs  config.rs  description.md  description.txt  header.rs  main.rs  overview.rs  params.rs  resume.rs  skills.rs  work-experience.json
